[gd_scene load_steps=15 format=2]

[ext_resource path="res://Stages/World.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Stars.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Ship.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Spawner_Powerups.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Spawner_Enemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://Stages/HUD.gd" type="Script" id=6]
[ext_resource path="res://Sprites/armor.png" type="Texture" id=7]
[ext_resource path="res://Sprites/score.png" type="Texture" id=8]
[ext_resource path="res://Fonts/m5x7.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Sounds/music.ogg" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 9 )

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/button_normal.png-f7df7d38fa6d15997d6275cb40ac590b.stex"

[sub_resource type="StreamTexture" id=3]
flags = 4
load_path = "res://.import/button_pressed.png-36b20c9854df3037cade8d1ea8f243a6.stex"

[sub_resource type="StreamTexture" id=4]
flags = 4
load_path = "res://.import/button_hover.png-af5b2af634933917c901e1ddbe645f3e.stex"

[node name="World" type="Node"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="Stars" parent="." instance=ExtResource( 2 )]

[node name="Ship" parent="." instance=ExtResource( 3 )]

[node name="Tween" type="Tween" parent="."]

[node name="Spawner_Powerups" parent="." instance=ExtResource( 4 )]

[node name="Spawner_Enemy" parent="." instance=ExtResource( 5 )]

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="Armor" type="Sprite" parent="HUD"]
position = Vector2( 10, 10 )
texture = ExtResource( 7 )
centered = false
hframes = 5
frame = 4

[node name="Score_Panel" type="TextureRect" parent="HUD"]
margin_left = 123.0
margin_top = 10.0
margin_right = 170.0
margin_bottom = 30.0
texture = ExtResource( 8 )

[node name="Score" type="Label" parent="HUD/Score_Panel"]
margin_left = 3.0
margin_top = 1.0
margin_right = 44.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
text = "0
"
align = 2

[node name="Button_Menu" type="TextureButton" parent="HUD"]
visible = false
margin_left = 67.0
margin_top = 134.0
margin_right = 114.0
margin_bottom = 150.0
texture_normal = SubResource( 2 )
texture_pressed = SubResource( 3 )
texture_hover = SubResource( 4 )

[node name="Label" type="Label" parent="HUD/Button_Menu"]
margin_left = 4.0
margin_right = 47.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "Menu
"
align = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[connection signal="armor_changed" from="Ship" to="HUD" method="_on_armor_changed"]
[connection signal="tree_exited" from="Ship" to="." method="_on_Ship_tree_exited"]
[connection signal="tween_completed" from="Tween" to="Camera2D" method="_on_tween_completed"]
[connection signal="pressed" from="HUD/Button_Menu" to="." method="_on_Button_Menu_pressed"]
